# huh

./: ai-memory-skill.md
memory/: .gitignore  ARCHITECTURE.md  COMPLETE.md  HOOKS_CONFIG.md  HOW_IT_WORKS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PHASES_45.md  README.md  SKILL.md  VALIDATION_AND_INTEGRATION.md  memory_cli.py  pyproject.toml  test_content_filter.py  test_memory.py  validate_final.py
memory/crisp_engine_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
memory/lib/: analyzer.py  cli.py  content_filter.py  crisp_sense.py  embeddings.py  hooks.py  instincts.py  project_memory.py  prune.py  reflector.py  retrieve.py  store.py  tree_index.py  ts_parser.py  wordlist.py
memory/lib/indexers/: __init__.py  code_indexer.py  indexer_common.py  markdown_indexer.py  text_indexer.py
memory/skills/huh/: index.md
skills/huh/: SKILL.md  changelog.md  index.md  l0.md  l1.md  l2.md  l3.md  search.md
skills/memory/: SKILL.md  changelog.md  index.md  instincts.md  l0.md  l1.md  l2.md  l3.md  search.md  tree.md
