[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crisp-engine-memory"
version = "1.0.0"
description = "Episodic memory system for AI agents — SOLID, storage-agnostic, PageIndex-inspired"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "isort>=5.0",
    "pytest>=7.0",
]
full = [
    "pillow>=10.0",      # for image indexing
    "mutagen>=1.47",     # for audio metadata
]
# Optional: tree-sitter for enhanced code analysis (install manually if needed)
# tree-sitter==0.20.0
# tree-sitter-python==0.20.0
# tree-sitter-javascript==0.20.0
# tree-sitter-typescript==0.20.0
# tree-sitter-go==0.20.0
# tree-sitter-rust==0.20.0
# tree-sitter-java==0.20.0

[project.scripts]
crisp-sense = "lib.crisp_sense:main"
crisp-hook  = "lib.hooks:main"
huh         = "lib.cli:main"

[tool.setuptools]
packages = ["lib", "lib.indexers"]
